# veridoc

./: .gitignore  AGENTS.md  README.md  SKILLS.md  TODO.md  pyproject.toml
docs/: graph_schema.json  specs.md
src/veridoc/: __init__.py  cli.py  core.py  lint.py
tests/: __init__.py  test_core.py
