[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridoc"
version = "0.1.0"
description = "CI-native documentation layer for RTL projects"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Veridoc Authors" }
]
keywords = [
    "verilog", "systemverilog", "rtl", "fpga", "asic", "eda",
    "documentation", "linting", "ci", "hardware", "verilator",
    "dependency-graph", "code-analysis", "agentic"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vishwaksen-1/veridoc"
Issues = "https://github.com/vishwaksen-1/veridoc/issues"

[project.scripts]
veridoc = "veridoc.cli:main"
verilint = "veridoc.lint:main"

[tool.setuptools.packages.find]
where = ["src"]
